--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>The PHP Practitioner</h1>
+	<h1>Laracast The PHP Practitioner</h1>
 </body>
 </html>
